# CleanRoom-Agentic-SE

./: .gitignore  README.md  pyproject.toml  run_baseline.py  run_example.sh  run_pipeline.py
data/srs/: 2009 - video search.xml  Event Management.xml  Human.xml  Shoten_SRS.xml  TRADING SOFTWARE.xml  dineout_srs.xml  foodsaver.xml  kinmail_srs.xml
docs/: API_USAGE.md  CHALLENGES.md  CHANGELOG.md  RUN_RESULTS.md  dafny-verification-workflow.md  methodology.md
results/: organized_results.xlsx
results/raw_results/: baseline_metrics.csv  baseline_runpy_newmodels_metrics.csv  cot_deepseek_results.csv  cot_deepseek_results.json  experiment_metrics.csv  mot_deepseek_results.csv  newmodels_metrics_current.csv  passk_matrix_extract.csv  passk_matrix_metrics.csv  three_way_deepseek.csv  three_way_summary_deepseek.csv
scripts/: collect_metrics.py  compare_three_way.py  emit_cot_results.py  emit_mot_results.py  run_cot_experiment.py  run_mot_matrix_parallel.py
src/cleanroom/: cli.py  config.py
src/cleanroom/agents/code/: agent.py  compile_repair.py
src/cleanroom/agents/dafny/: agent.py
src/cleanroom/agents/dependency/: agent.py
src/cleanroom/targets/: __init__.py  base.py  java.py  js.py  spring.py
src/cleanroom/utils/: baseline_oracle.py  code_stats.py  contracts.py  cost.py  dafny_marshal.py  dafny_project.py  dafny_verify.py  ir.py  java_packager.py  java_tooling.py  js_packager.py  js_tooling.py  llm_client.py  maven_tooling.py  packager.py  prompt_renderer.py  run_record.py  spring_packager.py  stack_select.py  usage_log.py
(+67 files in other folders)
