[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-cleanroom"
version = "0.1.0"
description = "CLEANROOM-AGENT: per-requirement certification of LLM-generated applications from SRS documents via independent derivation and proof-then-test routing"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.28.0",
    "pydantic>=2.0",
    "typer>=0.12",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "langchain>=1.3.4",
    "langchain-openai>=0.3",
    "pypdf>=6.13.0",
    "lxml>=6.1.1",
    "fastapi>=0.138.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.32",
]

[project.scripts]
cleanroom = "src.cleanroom.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]


[tool.pytest.ini_options]
# Only collect the repo's own tests — never the generated test artifacts under outputs/.
testpaths = ["tests"]
